example using the updated stepper

--- a/lrndesign-steppercollapse.html
+++ b/lrndesign-steppercollapse.html
@@ -17,23 +17,24 @@ A LRN element
     </style>
     <h2>[[title]]</h2>
 
+<lrn-objective title="Text" task="assignment">
+dokokadskoadsokds
+ads
+ad
+s
+ads
+asd
+</lrn-objective>
 <lrndesign-stepper>
-  <lrndesign-stepper-button on-click="toggle" title="Step 1: Text" icon="book" url="#"></lrndesign-stepper-button>
-  <iron-collapse>
-  <div>First step content goes here...</div>
-  </iron-collapse>
-  <lrndesign-stepper-button on-click="toggle" title="Step 2: Video" icon="av:play-circle-filled" url="#"></lrndesign-stepper-button>
-  <iron-collapse>
-  <div>Second step content goes here...</div>
-  </iron-collapse>
-  <lrndesign-stepper-button on-click="toggle" title="Step 3: Quiz" icon="assignment-turned-in" url="#"></lrndesign-stepper-button>
-    <iron-collapse>
-  <div>Third step content goes here...</div>
-  </iron-collapse>
-  <lrndesign-stepper-button on-click="toggle" title="Step 4: Discuss" icon="social:people" url="#"></lrndesign-stepper-button>
-  <iron-collapse>
-  <div>Fourth step content goes here...</div>
-  </iron-collapse>
+  <lrndesign-stepper-button title="Step 1: Text" icon="book" url="#">
+  </lrndesign-stepper-button>
+  <lrndesign-stepper-button title="Step 2: Video" icon="av:play-circle-filled" collapsible>
+    Things and stuff
+  </lrndesign-stepper-button>
+  <lrndesign-stepper-button title="Step 3: Quiz" icon="assignment-turned-in" url="#"></lrndesign-stepper-button>
+  <lrndesign-stepper-button title="Step 4: Discuss" icon="social:people" collapsible>
+    Fourth step content goes here...
+  </lrndesign-stepper-button>
 </lrndesign-stepper>
 
   </template>
@@ -48,11 +49,7 @@ A LRN element
           type: String,
           value: 'lrndesign-steppercollapse',
         },
-      },
-toggle: function(e) {
-  console.log(e.target);
-  e.target.parentNode.parentNode.nextSibling.toggle();
-}
+      }
     });
   </script>
 </dom-module>
